src/various/GrammarParser.output
State 64 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce


Grammar

    0 $accept: Specification "end of file"

    1 Specification: Header Definitions

    2 Header: Attributes "SCOD"
    3       | "SCOD"

    4 Definitions: Definitions AttributedDefinition
    5            | AttributedDefinition

    6 AttributedDefinition: Attributes Definition
    7                     | Definition
    8                     | error

    9 Definition: MemoryDefinition
   10           | RegisterDefinition
   11           | FieldDefinition
   12           | FormatDefinition
   13           | BufferDefinition
   14           | InstructionDefinition
   15           | MicroProcessorDefinition
   16           | CacheDefinition
   17           | InterconnectDefinition
   18           | OptionDefinition
   19           | EnumerationDefinition
   20           | UsingDefinition

   21 MemoryDefinition: "memory" Identifier ":" MappingType

   22 RegisterDefinition: "register" Identifier ":" Type

   23 FieldDefinition: "field" Identifier ":" Type

   24 FormatDefinition: "format" Identifier ":" BasicType "=" FormatFields

   25 FormatFields: MappingLiteral

   26 BufferDefinition: "buffer" Identifier ":" Type "=" Term

   27 InstructionDefinition: "instruction" Identifier ":" BasicType "=" Statement
   28                      | "instruction" Identifier ":" BasicType "=" Statement InstructionOptions

   29 MicroProcessorDefinition: "microprocessor" Identifier ":" IdentifierPath "=" Statement
   30                         | "microprocessor" Identifier ":" IdentifierPath "=" Statement MicroProcessorOptions

   31 CacheDefinition: "cache" Identifier ":" Type "=" MappingLiteral

   32 InterconnectDefinition: "interconnect" Identifier ":" Type "=" MappingLiteral

   33 OptionDefinition: ReferenceLiteral DecodingOption
   34                 | ReferenceLiteral SyntaxOption
   35                 | ReferenceLiteral ExpansionOption

   36 EnumerationDefinition: "enumeration" Identifier "=" Enumerators

   37 Enumerators: SetLiteral

   38 UsingDefinition: "using" Identifier "=" Type

   39 InstructionOptions: InstructionOptions InstructionOption
   40                   | InstructionOption

   41 InstructionOption: DecodingOption
   42                  | SyntaxOption
   43                  | ExpansionOption

   44 DecodingOption: "decoding" "=" RecordLiteral

   45 SyntaxOption: "syntax" "=" SetLiteral

   46 ExpansionOption: "expansion" "=" SetLiteral

   47 MicroProcessorOptions: MicroProcessorOptions MicroProcessorOption
   48                      | MicroProcessorOption

   49 MicroProcessorOption: StageOption

   50 StageOption: "stage" Identifier "=" BlockStatement

   51 Statements: Statements Statement
   52           | Statement

   53 Statement: SkipStatement
   54          | AbstractStatement
   55          | BlockStatement
   56          | CallStatement
   57          | LetStatement
   58          | AssignmentStatement
   59          | ConditionalStatement

   60 SkipStatement: "skip"

   61 AbstractStatement: "abstract"

   62 BlockStatement: "{" Statements "}"
   63               | "{" error "}"

   64 CallStatement: DirectCallExpression

   65 LetStatement: "let" VariableBindings "in" Statement

   66 AssignmentStatement: DirectCallExpression ":=" Term

   67 ConditionalStatement: "if" Term "then" Statement
   68                     | "if" Term "then" Statement "else" Statement

   69 Terms: Terms "," Term
   70      | Term

   71 Term: Expression
   72     | LetExpression
   73     | ConditionalExpression
   74     | OperatorExpression

   75 Expression: "(" Term ")"
   76           | CallExpression
   77           | Literal
   78           | "+" Term
   79           | "-" Term

   80 LetExpression: "let" VariableBindings "in" Term

   81 ConditionalExpression: "if" Term "then" Expression "else" Expression

   82 OperatorExpression: "not" Term
   83                   | Term "and" Term
   84                   | Term "or" Term
   85                   | Term "xor" Term
   86                   | Term "implies" Term
   87                   | Term "=>" Term
   88                   | Term "+" Term
   89                   | Term "(+)" Term
   90                   | Term "-" Term
   91                   | Term "(-)" Term
   92                   | Term "*" Term
   93                   | Term "<<" Term
   94                   | Term "(<<)" Term
   95                   | Term ">>" Term
   96                   | Term "(>>)" Term
   97                   | Term "=" Term
   98                   | Term "!=" Term
   99                   | Term "<" Term
  100                   | Term "<=" Term
  101                   | Term ">" Term
  102                   | Term ">=" Term

  103 CallExpression: DirectCallExpression
  104               | MethodCallExpression

  105 DirectCallExpression: IdentifierPath
  106                     | IdentifierPath "(" ")"
  107                     | IdentifierPath "(" Terms ")"
  108                     | IdentifierPath "(" error ")"

  109 MethodCallExpression: Expression "." Identifier
  110                     | Expression "." Identifier "(" ")"
  111                     | Expression "." Identifier "(" Terms ")"
  112                     | Expression "." Identifier "(" error ")"

  113 Literal: BooleanLiteral
  114        | IntegerLiteral
  115        | BinaryLiteral
  116        | StringLiteral
  117        | SetLiteral
  118        | ListLiteral
  119        | RangeLiteral
  120        | RecordLiteral
  121        | MappingLiteral
  122        | ReferenceLiteral
  123        | GrammarLiteral

  124 BooleanLiteral: "true"
  125               | "false"

  126 IntegerLiteral: "integer"

  127 BinaryLiteral: "binary"
  128              | "hexadecimal"

  129 StringLiteral: "string"

  130 SetLiteral: "{" Terms "}"

  131 ListLiteral: "[" Terms "]"

  132 RangeLiteral: "[" Term ".." Term "]"

  133 RecordLiteral: "{" Assignments "}"

  134 Assignments: Assignments "," Assignment
  135            | Assignment

  136 Assignment: Identifier ":" Term

  137 MappingLiteral: "{" Mappings "}"

  138 Mappings: Mappings "," Mapping
  139         | Mapping

  140 Mapping: Term "->" Term
  141        | "(" Terms ")" "->" Term

  142 ReferenceLiteral: "@" IdentifierPath

  143 GrammarLiteral: "::" Terminals ";"

  144 Terminals: Terminals Terminal
  145          | Terminal

  146 Terminal: DirectCallExpression
  147         | IntegerLiteral
  148         | BinaryLiteral
  149         | StringLiteral
  150         | ReferenceLiteral

  151 Type: BasicType
  152     | MappingType

  153 BasicType: IdentifierPath
  154          | PropertyType

  155 PropertyType: IdentifierPath "'" IntegerLiteral

  156 MappingType: ArgumentTypes "->" BasicType

  157 ArgumentTypes: ArgumentTypes "*" BasicType
  158              | Type

  159 VariableBindings: VariableBindings "," VariableBinding
  160                 | VariableBinding

  161 VariableBinding: AttributedVariable "=" Term

  162 AttributedVariable: Attributes Variable
  163                   | Variable

  164 Variable: TypedVariable
  165         | Identifier

  166 TypedVariable: Identifier ":" Type

  167 Identifier: "identifier"
  168           | "instruction"
  169           | "decoding"

  170 IdentifierPath: IdentifierPath "::" Identifier
  171               | Identifier

  172 Attributes: Attributes Attribute
  173           | Attribute

  174 Attribute: "[" BasicAttribute "]"
  175          | "[" ExpressionAttribute "]"
  176          | "[" error "]"

  177 BasicAttribute: Identifier

  178 ExpressionAttribute: Identifier Term


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256) 8 63 108 112 176
    "SCOD" <CST::Token::Ptr> (258) 2 3
    "memory" <CST::Token::Ptr> (259) 21
    "register" <CST::Token::Ptr> (260) 22
    "field" <CST::Token::Ptr> (261) 23
    "format" <CST::Token::Ptr> (262) 24
    "buffer" <CST::Token::Ptr> (263) 26
    "instruction" <CST::Token::Ptr> (264) 27 28 168
    "microprocessor" <CST::Token::Ptr> (265) 29 30
    "cache" <CST::Token::Ptr> (266) 31
    "interconnect" <CST::Token::Ptr> (267) 32
    "decoding" <CST::Token::Ptr> (268) 44 169
    "syntax" <CST::Token::Ptr> (269) 45
    "expansion" <CST::Token::Ptr> (270) 46
    "stage" <CST::Token::Ptr> (271) 50
    "enumeration" <CST::Token::Ptr> (272) 36
    "using" <CST::Token::Ptr> (273) 38
    "skip" <CST::Token::Ptr> (274) 60
    "abstract" <CST::Token::Ptr> (275) 61
    "let" <CST::Token::Ptr> (276) 65 80
    "in" <CST::Token::Ptr> (277) 65 80
    "if" <CST::Token::Ptr> (278) 67 68 81
    "then" <CST::Token::Ptr> (279) 67 68 81
    "else" <CST::Token::Ptr> (280) 68 81
    "false" <CST::Token::Ptr> (281) 125
    "true" <CST::Token::Ptr> (282) 124
    "not" <CST::Token::Ptr> (283) 82
    "and" <CST::Token::Ptr> (284) 83
    "or" <CST::Token::Ptr> (285) 84
    "xor" <CST::Token::Ptr> (286) 85
    "implies" <CST::Token::Ptr> (287) 86
    "=>" <CST::Token::Ptr> (288) 87
    "+" <CST::Token::Ptr> (289) 78 88
    "(+)" <CST::Token::Ptr> (290) 89
    "-" <CST::Token::Ptr> (291) 79 90
    "(-)" <CST::Token::Ptr> (292) 91
    "*" <CST::Token::Ptr> (293) 92 157
    "<<" <CST::Token::Ptr> (294) 93
    "(<<)" <CST::Token::Ptr> (295) 94
    ">>" <CST::Token::Ptr> (296) 95
    "(>>)" <CST::Token::Ptr> (297) 96
    "=" <CST::Token::Ptr> (298) 24 26 27 28 29 30 31 32 36 38 44 45 46 50 97 161
    "!=" <CST::Token::Ptr> (299) 98
    "<" <CST::Token::Ptr> (300) 99
    "<=" <CST::Token::Ptr> (301) 100
    ">" <CST::Token::Ptr> (302) 101
    ">=" <CST::Token::Ptr> (303) 102
    ":=" <CST::Token::Ptr> (304) 66
    "->" <CST::Token::Ptr> (305) 140 141 156
    "'" <CST::Token::Ptr> (306) 155
    ":" <CST::Token::Ptr> (307) 21 22 23 24 26 27 28 29 30 31 32 136 166
    ";" <CST::Token::Ptr> (308) 143
    "::" <CST::Token::Ptr> (309) 143 170
    "(" <CST::Token::Ptr> (310) 75 106 107 108 110 111 112 141
    ")" <CST::Token::Ptr> (311) 75 106 107 108 110 111 112 141
    "[" <CST::Token::Ptr> (312) 131 132 174 175 176
    "]" <CST::Token::Ptr> (313) 131 132 174 175 176
    "{" <CST::Token::Ptr> (314) 62 63 130 133 137
    "}" <CST::Token::Ptr> (315) 62 63 130 133 137
    "@" <CST::Token::Ptr> (316) 142
    "," <CST::Token::Ptr> (317) 69 134 138 159
    "." <CST::Token::Ptr> (318) 109 110 111 112
    ".." <CST::Token::Ptr> (319) 132
    "integer" <ValueLiteral::Ptr> (320) 126
    "binary" <ValueLiteral::Ptr> (321) 127
    "hexadecimal" <ValueLiteral::Ptr> (322) 128
    "string" <ValueLiteral::Ptr> (323) 129
    "identifier" <Identifier::Ptr> (324) 167


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    Specification <Specification::Ptr> (71)
        on left: 1
        on right: 0
    Header <HeaderDefinition::Ptr> (72)
        on left: 2 3
        on right: 1
    Definitions <Definitions::Ptr> (73)
        on left: 4 5
        on right: 1 4
    AttributedDefinition <Definition::Ptr> (74)
        on left: 6 7 8
        on right: 4 5
    Definition <Definition::Ptr> (75)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 6 7
    MemoryDefinition <MemoryDefinition::Ptr> (76)
        on left: 21
        on right: 9
    RegisterDefinition <RegisterDefinition::Ptr> (77)
        on left: 22
        on right: 10
    FieldDefinition <FieldDefinition::Ptr> (78)
        on left: 23
        on right: 11
    FormatDefinition <FormatDefinition::Ptr> (79)
        on left: 24
        on right: 12
    FormatFields <MappingLiteral::Ptr> (80)
        on left: 25
        on right: 24
    BufferDefinition <BufferDefinition::Ptr> (81)
        on left: 26
        on right: 13
    InstructionDefinition <InstructionDefinition::Ptr> (82)
        on left: 27 28
        on right: 14
    MicroProcessorDefinition <MicroProcessorDefinition::Ptr> (83)
        on left: 29 30
        on right: 15
    CacheDefinition <CacheDefinition::Ptr> (84)
        on left: 31
        on right: 16
    InterconnectDefinition <InterconnectDefinition::Ptr> (85)
        on left: 32
        on right: 17
    OptionDefinition <OptionDefinition::Ptr> (86)
        on left: 33 34 35
        on right: 18
    EnumerationDefinition <EnumerationDefinition::Ptr> (87)
        on left: 36
        on right: 19
    Enumerators <SetLiteral::Ptr> (88)
        on left: 37
        on right: 36
    UsingDefinition <UsingDefinition::Ptr> (89)
        on left: 38
        on right: 20
    InstructionOptions <Options::Ptr> (90)
        on left: 39 40
        on right: 28 39
    InstructionOption <Option::Ptr> (91)
        on left: 41 42 43
        on right: 39 40
    DecodingOption <DecodingOption::Ptr> (92)
        on left: 44
        on right: 33 41
    SyntaxOption <SyntaxOption::Ptr> (93)
        on left: 45
        on right: 34 42
    ExpansionOption <ExpansionOption::Ptr> (94)
        on left: 46
        on right: 35 43
    MicroProcessorOptions <Options::Ptr> (95)
        on left: 47 48
        on right: 30 47
    MicroProcessorOption <Option::Ptr> (96)
        on left: 49
        on right: 47 48
    StageOption <StageOption::Ptr> (97)
        on left: 50
        on right: 49
    Statements <Statements::Ptr> (98)
        on left: 51 52
        on right: 51 62
    Statement <Statement::Ptr> (99)
        on left: 53 54 55 56 57 58 59
        on right: 27 28 29 30 51 52 65 67 68
    SkipStatement <SkipStatement::Ptr> (100)
        on left: 60
        on right: 53
    AbstractStatement <SkipStatement::Ptr> (101)
        on left: 61
        on right: 54
    BlockStatement <BlockStatement::Ptr> (102)
        on left: 62 63
        on right: 50 55
    CallStatement <CallStatement::Ptr> (103)
        on left: 64
        on right: 56
    LetStatement <LetStatement::Ptr> (104)
        on left: 65
        on right: 57
    AssignmentStatement <AssignmentStatement::Ptr> (105)
        on left: 66
        on right: 58
    ConditionalStatement <ConditionalStatement::Ptr> (106)
        on left: 67 68
        on right: 59
    Terms <Expressions::Ptr> (107)
        on left: 69 70
        on right: 69 107 111 130 131 141
    Term <Expression::Ptr> (108)
        on left: 71 72 73 74
        on right: 26 66 67 68 69 70 75 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 132 136 140 141 161 178
    Expression <Expression::Ptr> (109)
        on left: 75 76 77 78 79
        on right: 71 81 109 110 111 112
    LetExpression <LetExpression::Ptr> (110)
        on left: 80
        on right: 72
    ConditionalExpression <ConditionalExpression::Ptr> (111)
        on left: 81
        on right: 73
    OperatorExpression <Expression::Ptr> (112)
        on left: 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
        on right: 74
    CallExpression <CallExpression::Ptr> (113)
        on left: 103 104
        on right: 76
    DirectCallExpression <DirectCallExpression::Ptr> (114)
        on left: 105 106 107 108
        on right: 64 66 103 146
    MethodCallExpression <MethodCallExpression::Ptr> (115)
        on left: 109 110 111 112
        on right: 104
    Literal <Literal::Ptr> (116)
        on left: 113 114 115 116 117 118 119 120 121 122 123
        on right: 77
    BooleanLiteral <ValueLiteral::Ptr> (117)
        on left: 124 125
        on right: 113
    IntegerLiteral <ValueLiteral::Ptr> (118)
        on left: 126
        on right: 114 147 155
    BinaryLiteral <ValueLiteral::Ptr> (119)
        on left: 127 128
        on right: 115 148
    StringLiteral <ValueLiteral::Ptr> (120)
        on left: 129
        on right: 116 149
    SetLiteral <SetLiteral::Ptr> (121)
        on left: 130
        on right: 37 45 46 117
    ListLiteral <ListLiteral::Ptr> (122)
        on left: 131
        on right: 118
    RangeLiteral <RangeLiteral::Ptr> (123)
        on left: 132
        on right: 119
    RecordLiteral <RecordLiteral::Ptr> (124)
        on left: 133
        on right: 44 120
    Assignments <NamedExpressions::Ptr> (125)
        on left: 134 135
        on right: 133 134
    Assignment <NamedExpression::Ptr> (126)
        on left: 136
        on right: 134 135
    MappingLiteral <MappingLiteral::Ptr> (127)
        on left: 137
        on right: 25 31 32 121
    Mappings <MappedExpressions::Ptr> (128)
        on left: 138 139
        on right: 137 138
    Mapping <MappedExpression::Ptr> (129)
        on left: 140 141
        on right: 138 139
    ReferenceLiteral <ReferenceLiteral::Ptr> (130)
        on left: 142
        on right: 33 34 35 122 150
    GrammarLiteral <GrammarLiteral::Ptr> (131)
        on left: 143
        on right: 123
    Terminals <Expressions::Ptr> (132)
        on left: 144 145
        on right: 143 144
    Terminal <Expression::Ptr> (133)
        on left: 146 147 148 149 150
        on right: 144 145
    Type <libscod::CST::Type::Ptr> (134)
        on left: 151 152
        on right: 22 23 26 31 32 38 158 166
    BasicType <libscod::CST::Type::Ptr> (135)
        on left: 153 154
        on right: 24 27 28 151 156 157
    PropertyType <libscod::CST::Type::Ptr> (136)
        on left: 155
        on right: 154
    MappingType <MappingType::Ptr> (137)
        on left: 156
        on right: 21 152
    ArgumentTypes <Types::Ptr> (138)
        on left: 157 158
        on right: 156 157
    VariableBindings <VariableBindings::Ptr> (139)
        on left: 159 160
        on right: 65 80 159
    VariableBinding <VariableBinding::Ptr> (140)
        on left: 161
        on right: 159 160
    AttributedVariable <VariableDefinition::Ptr> (141)
        on left: 162 163
        on right: 161
    Variable <VariableDefinition::Ptr> (142)
        on left: 164 165
        on right: 162 163
    TypedVariable <VariableDefinition::Ptr> (143)
        on left: 166
        on right: 164
    Identifier <Identifier::Ptr> (144)
        on left: 167 168 169
        on right: 21 22 23 24 26 27 28 29 30 31 32 36 38 50 109 110 111 112 136 165 166 170 171 177 178
    IdentifierPath <IdentifierPath::Ptr> (145)
        on left: 170 171
        on right: 29 30 105 106 107 108 142 153 155 170
    Attributes <Attributes::Ptr> (146)
        on left: 172 173
        on right: 2 6 162 172
    Attribute <Attribute::Ptr> (147)
        on left: 174 175 176
        on right: 172 173
    BasicAttribute <BasicAttribute::Ptr> (148)
        on left: 177
        on right: 174
    ExpressionAttribute <ExpressionAttribute::Ptr> (149)
        on left: 178
        on right: 175


State 0

    0 $accept: . Specification "end of file"

    "SCOD"  shift, and go to state 1
    "["     shift, and go to state 2

    Specification  go to state 3
    Header         go to state 4
    Attributes     go to state 5
    Attribute      go to state 6


State 1

    3 Header: "SCOD" .

    $default  reduce using rule 3 (Header)


State 2

  174 Attribute: "[" . BasicAttribute "]"
  175          | "[" . ExpressionAttribute "]"
  176          | "[" . error "]"

    error          shift, and go to state 7
    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier           go to state 11
    BasicAttribute       go to state 12
    ExpressionAttribute  go to state 13


State 3

    0 $accept: Specification . "end of file"

    "end of file"  shift, and go to state 14


State 4

    1 Specification: Header . Definitions

    error             shift, and go to state 15
    "memory"          shift, and go to state 16
    "register"        shift, and go to state 17
    "field"           shift, and go to state 18
    "format"          shift, and go to state 19
    "buffer"          shift, and go to state 20
    "instruction"     shift, and go to state 21
    "microprocessor"  shift, and go to state 22
    "cache"           shift, and go to state 23
    "interconnect"    shift, and go to state 24
    "enumeration"     shift, and go to state 25
    "using"           shift, and go to state 26
    "["               shift, and go to state 2
    "@"               shift, and go to state 27

    Definitions               go to state 28
    AttributedDefinition      go to state 29
    Definition                go to state 30
    MemoryDefinition          go to state 31
    RegisterDefinition        go to state 32
    FieldDefinition           go to state 33
    FormatDefinition          go to state 34
    BufferDefinition          go to state 35
    InstructionDefinition     go to state 36
    MicroProcessorDefinition  go to state 37
    CacheDefinition           go to state 38
    InterconnectDefinition    go to state 39
    OptionDefinition          go to state 40
    EnumerationDefinition     go to state 41
    UsingDefinition           go to state 42
    ReferenceLiteral          go to state 43
    Attributes                go to state 44
    Attribute                 go to state 6


State 5

    2 Header: Attributes . "SCOD"
  172 Attributes: Attributes . Attribute

    "SCOD"  shift, and go to state 45
    "["     shift, and go to state 2

    Attribute  go to state 46


State 6

  173 Attributes: Attribute .

    $default  reduce using rule 173 (Attributes)


State 7

  176 Attribute: "[" error . "]"

    "]"  shift, and go to state 47


State 8

  168 Identifier: "instruction" .

    $default  reduce using rule 168 (Identifier)


State 9

  169 Identifier: "decoding" .

    $default  reduce using rule 169 (Identifier)


State 10

  167 Identifier: "identifier" .

    $default  reduce using rule 167 (Identifier)


State 11

  177 BasicAttribute: Identifier .
  178 ExpressionAttribute: Identifier . Term

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "let"          shift, and go to state 48
    "if"           shift, and go to state 49
    "false"        shift, and go to state 50
    "true"         shift, and go to state 51
    "not"          shift, and go to state 52
    "+"            shift, and go to state 53
    "-"            shift, and go to state 54
    "::"           shift, and go to state 55
    "("            shift, and go to state 56
    "["            shift, and go to state 57
    "{"            shift, and go to state 58
    "@"            shift, and go to state 27
    "integer"      shift, and go to state 59
    "binary"       shift, and go to state 60
    "hexadecimal"  shift, and go to state 61
    "string"       shift, and go to state 62
    "identifier"   shift, and go to state 10

    $default  reduce using rule 177 (BasicAttribute)

    Term                   go to state 63
    Expression             go to state 64
    LetExpression          go to state 65
    ConditionalExpression  go to state 66
    OperatorExpression     go to state 67
    CallExpression         go to state 68
    DirectCallExpression   go to state 69
    MethodCallExpression   go to state 70
    Literal                go to state 71
    BooleanLiteral         go to state 72
    IntegerLiteral         go to state 73
    BinaryLiteral          go to state 74
    StringLiteral          go to state 75
    SetLiteral             go to state 76
    ListLiteral            go to state 77
    RangeLiteral           go to state 78
    RecordLiteral          go to state 79
    MappingLiteral         go to state 80
    ReferenceLiteral       go to state 81
    GrammarLiteral         go to state 82
    Identifier             go to state 83
    IdentifierPath         go to state 84


State 12

  174 Attribute: "[" BasicAttribute . "]"

    "]"  shift, and go to state 85


State 13

  175 Attribute: "[" ExpressionAttribute . "]"

    "]"  shift, and go to state 86


State 14

    0 $accept: Specification "end of file" .

    $default  accept


State 15

    8 AttributedDefinition: error .

    $default  reduce using rule 8 (AttributedDefinition)


State 16

   21 MemoryDefinition: "memory" . Identifier ":" MappingType

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 87


State 17

   22 RegisterDefinition: "register" . Identifier ":" Type

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 88


State 18

   23 FieldDefinition: "field" . Identifier ":" Type

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 89


State 19

   24 FormatDefinition: "format" . Identifier ":" BasicType "=" FormatFields

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 90


State 20

   26 BufferDefinition: "buffer" . Identifier ":" Type "=" Term

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 91


State 21

   27 InstructionDefinition: "instruction" . Identifier ":" BasicType "=" Statement
   28                      | "instruction" . Identifier ":" BasicType "=" Statement InstructionOptions

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 92


State 22

   29 MicroProcessorDefinition: "microprocessor" . Identifier ":" IdentifierPath "=" Statement
   30                         | "microprocessor" . Identifier ":" IdentifierPath "=" Statement MicroProcessorOptions

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 93


State 23

   31 CacheDefinition: "cache" . Identifier ":" Type "=" MappingLiteral

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 94


State 24

   32 InterconnectDefinition: "interconnect" . Identifier ":" Type "=" MappingLiteral

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 95


State 25

   36 EnumerationDefinition: "enumeration" . Identifier "=" Enumerators

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 96


State 26

   38 UsingDefinition: "using" . Identifier "=" Type

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier  go to state 97


State 27

  142 ReferenceLiteral: "@" . IdentifierPath

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "identifier"   shift, and go to state 10

    Identifier      go to state 83
    IdentifierPath  go to state 98


State 28

    1 Specification: Header Definitions .
    4 Definitions: Definitions . AttributedDefinition

    error             shift, and go to state 15
    "memory"          shift, and go to state 16
    "register"        shift, and go to state 17
    "field"           shift, and go to state 18
    "format"          shift, and go to state 19
    "buffer"          shift, and go to state 20
    "instruction"     shift, and go to state 21
    "microprocessor"  shift, and go to state 22
    "cache"           shift, and go to state 23
    "interconnect"    shift, and go to state 24
    "enumeration"     shift, and go to state 25
    "using"           shift, and go to state 26
    "["               shift, and go to state 2
    "@"               shift, and go to state 27

    "end of file"  reduce using rule 1 (Specification)

    AttributedDefinition      go to state 99
    Definition                go to state 30
    MemoryDefinition          go to state 31
    RegisterDefinition        go to state 32
    FieldDefinition           go to state 33
    FormatDefinition          go to state 34
    BufferDefinition          go to state 35
    InstructionDefinition     go to state 36
    MicroProcessorDefinition  go to state 37
    CacheDefinition           go to state 38
    InterconnectDefinition    go to state 39
    OptionDefinition          go to state 40
    EnumerationDefinition     go to state 41
    UsingDefinition           go to state 42
    ReferenceLiteral          go to state 43
    Attributes                go to state 44
    Attribute                 go to state 6


State 29

    5 Definitions: AttributedDefinition .

    $default  reduce using rule 5 (Definitions)


State 30

    7 AttributedDefinition: Definition .

    $default  reduce using rule 7 (AttributedDefinition)


State 31

    9 Definition: MemoryDefinition .

    $default  reduce using rule 9 (Definition)


State 32

   10 Definition: RegisterDefinition .

    $default  reduce using rule 10 (Definition)


State 33

   11 Definition: FieldDefinition .

    $default  reduce using rule 11 (Definition)


State 34

   12 Definition: FormatDefinition .

    $default  reduce using rule 12 (Definition)


State 35

   13 Definition: BufferDefinition .

    $default  reduce using rule 13 (Definition)


State 36

   14 Definition: InstructionDefinition .

    $default  reduce using rule 14 (Definition)


State 37

   15 Definition: MicroProcessorDefinition .

    $default  reduce using rule 15 (Definition)


State 38

   16 Definition: CacheDefinition .

    $default  reduce using rule 16 (Definition)


State 39

   17 Definition: InterconnectDefinition .

    $default  reduce using rule 17 (Definition)


State 40

   18 Definition: OptionDefinition .

    $default  reduce using rule 18 (Definition)


State 41

   19 Definition: EnumerationDefinition .

    $default  reduce using rule 19 (Definition)


State 42

   20 Definition: UsingDefinition .

    $default  reduce using rule 20 (Definition)


State 43

   33 OptionDefinition: ReferenceLiteral . DecodingOption
   34                 | ReferenceLiteral . SyntaxOption
   35                 | ReferenceLiteral . ExpansionOption

    "decoding"   shift, and go to state 100
    "syntax"     shift, and go to state 101
    "expansion"  shift, and go to state 102

    DecodingOption   go to state 103
    SyntaxOption     go to state 104
    ExpansionOption  go to state 105


State 44

    6 AttributedDefinition: Attributes . Definition
  172 Attributes: Attributes . Attribute

    "memory"          shift, and go to state 16
    "register"        shift, and go to state 17
    "field"           shift, and go to state 18
    "format"          shift, and go to state 19
    "buffer"          shift, and go to state 20
    "instruction"     shift, and go to state 21
    "microprocessor"  shift, and go to state 22
    "cache"           shift, and go to state 23
    "interconnect"    shift, and go to state 24
    "enumeration"     shift, and go to state 25
    "using"           shift, and go to state 26
    "["               shift, and go to state 2
    "@"               shift, and go to state 27

    Definition                go to state 106
    MemoryDefinition          go to state 31
    RegisterDefinition        go to state 32
    FieldDefinition           go to state 33
    FormatDefinition          go to state 34
    BufferDefinition          go to state 35
    InstructionDefinition     go to state 36
    MicroProcessorDefinition  go to state 37
    CacheDefinition           go to state 38
    InterconnectDefinition    go to state 39
    OptionDefinition          go to state 40
    EnumerationDefinition     go to state 41
    UsingDefinition           go to state 42
    ReferenceLiteral          go to state 43
    Attribute                 go to state 46


State 45

    2 Header: Attributes "SCOD" .

    $default  reduce using rule 2 (Header)


State 46

  172 Attributes: Attributes Attribute .

    $default  reduce using rule 172 (Attributes)


State 47

  176 Attribute: "[" error "]" .

    $default  reduce using rule 176 (Attribute)


State 48

   80 LetExpression: "let" . VariableBindings "in" Term

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "["            shift, and go to state 2
    "identifier"   shift, and go to state 10

    VariableBindings    go to state 107
    VariableBinding     go to state 108
    AttributedVariable  go to state 109
    Variable            go to state 110
    TypedVariable       go to state 111
    Identifier          go to state 112
    Attributes          go to state 113
    Attribute           go to state 6


State 49

   81 ConditionalExpression: "if" . Term "then" Expression "else" Expression

    "instruction"  shift, and go to state 8
    "decoding"     shift, and go to state 9
    "let"          shift, and go to state 48
    "if"           shift, and go to state 49
    "false"        shift, and go to state 50
    "true"         shift, and go to state 51
    "not"          shift, and go to state 52
    "+"            shift, and go to state 53
    "-"            shift, and go to state 54
    "::"           shift, and go to state 55
    "("            shift, and go to state 56
    "["            shift, and go to state 57
    "{"            shift, and go to state 58
    "@"            shift, and go to state 27
    "integer"      shift, and go to state 59
    "binary"       shift, and go to state 60
    "hexadecimal"  shift, and go to state 61
    "string"       shift, and go to state 62
    "identifier"   shift, and go to state 10

    Term                   go to state 114
    Expression             go to state 64
    LetExpression          go to state 65
    ConditionalExpression  go to state 66
    OperatorExpression     go to state 67
    CallExpression         go to state 68
    DirectCallExpression   go to state 69
    MethodCallExpression   go to state 70
    Literal                go to state 71
    BooleanLiteral         go to state 72
    IntegerLiteral         go to state 73
    BinaryLiteral          go to state 74
    StringLiteral          go to state 75
    SetLiteral             go to state 76
    ListLiteral            go to state 77
    RangeLiteral           go to state 78
    RecordLiteral          go to state 79
    MappingLiteral         go to state 80
    ReferenceLiteral       go to state 81
    GrammarLiteral         go to state 82
    Identifier             go to state 83
    IdentifierPath         go to state 84


State 50

  125 BooleanLiteral: "false" .

    $default  reduce using rule 125 (BooleanLiteral)


State 51

  124 BooleanLiteral: "true" .

    $default  reduce using rule 124 (BooleanLiteral)


State 52

   82 OperatorExpression: "not" . Term
